Avoid margin collapse in leftwhat/rightwhat, so borders join up.

--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ margin-bottom: 0em;
 {
 float: left;
 width: 50%;
+padding: 0.1px; /* rounds down to 0, but prevents margin collapse */
 padding-right: 0;
 margin-right: 0;
 }
@@ -153,6 +154,7 @@ margin-right: 0;
 {
 margin-left: 50%;
 border-left: 2px solid #e8e8e8;
+padding: 0.1px; /* rounds down to 0, but prevents margin collapse */
 padding-left: 1.5em;
 }
 
